fix: cookie details alignment

--- a/src/css/cookie.css
+++ b/src/css/cookie.css
@@ -37,3 +37,6 @@
 .cookie-bar .card-link {
   color: var(--plentyBluesPacificBlue);
 }
+td.pl-3 {
+  width: 260px;
+}
